# algebra-system

./: .gitignore
dynint/dynint/: .gitignore  CMakeLists.txt  Dockerfile  QUICKSTART.md  README.md  TRACE_VULNERABILITY_README.md  UKRAINIAN_GUIDE.md  USAGE_EXAMPLES.md  docker-compose.yml  dyninst_wrapper.cpp  pyproject.toml  run_full_trace.sh  run_tests.sh  send_test_packet.py  trace_vulnerability_path.py
dynint/dynint/dynint/: __init__.py  behavior_algebra.py  cli.py  static.py
dynint/dynint/dynint/backends/: __init__.py  angr.py  capstone.py  objdump.py
dynint/dynint/dynint/dyntrace/: __init__.py  dyninst_backend.py  runner.py
dynint/dynint/tests/: test_dyntrace.py  test_static.py
